Fix menu not showing

--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -121,17 +121,14 @@
 
 /* desktop */
 @media screen and (min-width: 768px) {
-  :root {
-    --nav-item-color: black;
-    --nav-item-font-size: 12px;
-  }
-
   .navbar {
     display: flex;
     justify-content: space-between;
     padding-bottom: 0;
     align-items: center;
     height: var(--nav-height);
+    --nav-item-color: black;
+    --nav-item-font-size: 12px;
   }
 
   .navbar.open {
